src/components/components.css
* {
    box-sizing: border-box;
}
html{
    box-sizing: border-box;
}

.AudioRegion{
    position:absolute;
    height:60px;
    margin-top: 5px;
    margin-bottom: 5px;
    background:pink;
    border: solid black 1px;
    display:flex;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
}
.AudioRegionCutIndicator {
    position: absolute;
    height:70px;
    border-left: solid red 2px;
    z-index: 10;
    pointer-events: none;
}
.AudioRegionGhostMove{
    pointer-events: none;
    z-index: 20;
    background:rgba(255, 58, 245, 0.178);
    border-width:2px;  
    border-style:dashed;
}
.AudioRegionGhostBuffer{
    pointer-events: none;
    z-index: 20;
    background:rgba(83, 184, 0, 0.5);
    border-width:2px;  
    border-style:dashed;
}
.AudioRegionDrag{
    background:red;
    z-index: 10;
}
.AudioRegion .StartHandle,
.AudioRegion .EndHandle {
    display:flex;
    justify-content: center;
    align-items: center;
    border: solid black 1px;
    height:100%;
}

.AudioRegion .StartHandle:hover,
.AudioRegion .EndHandle:hover{
    cursor: col-resize;
}
.AudioRegion:hover {
    cursor: grab;
}
.AudioRegionCut:hover {
    cursor: pointer;
}


.AudioTrack{
    background:cyan;
    border:solid black 1px;
    white-space: nowrap;
    display:flex;
    position:relative;
    width:100%;
    height:70px;
}

.EditorField{
    border: solid black 1px;
    width:max-content;
    position: relative;
    display:flex;
}
.ToolField{
    width:min-content;
    display:inline-block;
    width: 12rem;
}
.AudioField{
    position: relative;
    left:100px;
    width:max-content;
    overflow:hidden;
    display:inline-block;
}

.TrackTool{
    z-index: 9;
    background:yellow;
    border:solid black 1px;
    display:inline-block;
    position: sticky;
    left:0;
    height:50px;
    display:flex;
    justify-content: center;
    align-items: center;
}

.TrackToolHelper{
    display:none;
    z-index: 10;
    background:blue;
    border:solid black 1px;
    position: absolute;
    left: 100%;
    flex-direction: row;
    height:50px;
    overflow: hidden;
}
.TrackTool:hover .TrackToolHelper{
    display:flex;
}


.TransportTimer{
    display:inline-block;
    position: sticky;
    left:0;
    border:solid black 1px;
    background:white;
    text-align: center;
}
.Timeline{
    position:relative;
    border:solid black 1px;
    width:max-content;
    white-space: nowrap;
}
.Timeline .TimelineBar{
    display:inline-block;
    border:solid gray 1px;
}

.Timeline .Playhead{
    position:absolute;
    z-index: 100;
    width:1px;
    height:100vh;
    left:20%;
    background-color: red;
    border:solid red 1px;
}

